--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -46,13 +46,56 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-div {
-  border: 13px solid green;
-  width: 400px;
-  height: 100px;
-  margin: 20px;
-  padding: 20px
+
+/*========================================================================================================================================
+GRID
+==========================================================================================================================================
+*/
+*,
+*:before,
+*:after {
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing: border-box;
 }
-span {
-  border: 13px solid red;
+
+.container{
+	margin: 0 auto;
+	width: 960px;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+/*=======================================================================================================================================
+TYPOGRAPHY
+=========================================================================================================================================
+*/
+h1, h3, h4, h5, p {
+	margin-bottom: 22px;
+}
+
+/*=======================================================================================================================================
+BUTTONS
+=========================================================================================================================================
+*/
+
+.btn { 
+	border-radius: 5px;
+	border: 1px solid green;
+	display: inline-block;
+	margin: 0;
+
+}
+
+.btn-alt{
+	border: 1px solid #dfe2e5;
+	padding: 10px 30px;
+}
+
+/*=======================================================================================================================================
+HOME
+=========================================================================================================================================
+*/
+
+.hero {
+	padding: 22px 80px 66px 80px;
 }
