--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -59,12 +59,36 @@ GRID
 	box-sizing: border-box;
 }
 
-.container{
+.container,
+.grid{
 	margin: 0 auto;
 	width: 960px;
 	padding-left: 30px;
 	padding-right: 30px;
 }
+.col-1-3{
+width: 32%;
+}
+
+.col-2-3{
+	width: 66.66%;
+}
+
+.col-1-3,
+.col-2-3{
+	display: inline-block;
+	vertical-align: top;
+}
+.grid
+.col-1-3,
+.col-2-3{
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+
+
+
 /*=======================================================================================================================================
 TYPOGRAPHY
 =========================================================================================================================================
@@ -99,3 +123,9 @@ HOME
 .hero {
 	padding: 22px 80px 66px 80px;
 }
+
+
+
+
+
+
